--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,7 +1,11 @@
-<p>login works!</p>
+<p>{{caption}}</p>
 
+<input type="text" [(ngModel)]="username" placeholder="Username"><br/>
+<input type="password" [(ngModel)]="password" placeholder="Password"><br/>
+<button (click)="onLogin()">Login</button>
 
-<table class="table table-bordered btn btn-primary"><tr><td [attr.colspan]="col">
- afasfasf
-</td><td></td></tr></table>
+{{count()}}
 
+<button (click)="increment()">Increment</button>
+<button (click)="decrement()">Decrement</button> 
+<button (click)="reset()">Reset</button>
