--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,10 @@
 
 <app-menu (menu)="menuitem($event)"></app-menu>
 <app-body [link]="link" [myhobbies]="myhobbies"></app-body>
+<h2 appHighlight>Default Yellow Highlight</h2>
+
+<h2 appHighlight="lightgreen">Light Green Highlight</h2>
+
+<p appHighlight="skyblue">
+  Hover over me to see a skyblue highlight effect!
+</p>
