--- a/src/app/component/body/body.component.html
+++ b/src/app/component/body/body.component.html
@@ -4,3 +4,6 @@
 <div *ngIf="link=='hobby'">
   <app-hobbies [myhobbies]="myhobbies"></app-hobbies>
     </div>
+    <div *ngIf="link=='fav'">
+      <app-favourite></app-favourite>
+    </div>
