--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,18 @@
 <p appHighlight="skyblue">
   Hover over me to see a skyblue highlight effect!
 </p> -->
-<app-body></app-body>
+<!-- <app-body></app-body>
 <app-stylesample></app-stylesample>
 
 <app-style2></app-style2>
-{{title | reversepipe}}
+{{title | reversepipe}} -->
 
-<h2>Angular Lifecycle Hooks Demo</h2>
+<!-- <h2>Angular Lifecycle Hooks Demo</h2>
     <button (click)="changeData()">Change Data</button>
     <button (click)="toggleChild()">Toggle Child Component</button>
-    <app-lifecycle  *ngIf="showChild" [data]="parentData"></app-lifecycle>
+    <app-lifecycle  *ngIf="showChild" [data]="parentData"></app-lifecycle> -->
 
-    <h2>Built-in pipes</h2>
+    <!-- <h2>Built-in pipes</h2>
 {{today | date:'fullDate'}}<br/>
 {{today | date:'shortTime'}}<br/>
 {{today | date:'short'}}<br/>
@@ -51,4 +51,7 @@ Number Pipes<br/>
 {{1234 | number :'1.2-2'}}<br/>
 {{1234 | number:'3.1-2'}}<br/>
 {{1234 | number:'3.0-0'}}<br/>
-{{1234 | number:'10.2-2'}}<br/>
+{{1234 | number:'10.2-2'}}<br/> -->
+
+<!-- <app-login></app-login> -->
+<app-users></app-users>
