--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,4 +54,5 @@ Number Pipes<br/>
 {{1234 | number:'10.2-2'}}<br/> -->
 
 <!-- <app-login></app-login> -->
-<app-users></app-users>
+<!-- <app-users></app-users> -->
+ <app-reactiveform></app-reactiveform>
