errorhandling_dataservice_usercomponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,5 +54,6 @@ Number Pipes<br/>
 {{1234 | number:'10.2-2'}}<br/> -->
 
 <!-- <app-login></app-login> -->
-<!-- <app-users></app-users> -->
- <app-reactiveform></app-reactiveform>
+<app-users></app-users>
+ <!-- <app-reactiveform></app-reactiveform> -->
+  <!-- <app-htmlform></app-htmlform> -->
