--- a/src/app/component/users/users.component.html
+++ b/src/app/component/users/users.component.html
@@ -12,3 +12,5 @@
     {{ user.firstName }} - {{ user.age }} <button (click)="deleteUser(user.id)">Delete</button> <button (click)="editUser(user)">Edit</button>
   </li>
   </ul>
+
+   <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
